Fixed ranking overflowing in certain cases.

--- a/public/babelbooapp/app.css
+++ b/public/babelbooapp/app.css
@@ -992,7 +992,7 @@ li.tag-selected {
 .ranking table {
     text-align: left;
     margin: auto;
-    margin-top: 15px;
+    margin-top: 5px;
 }
 
 .ranking tr {
